--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,26 +29,4 @@
             margin: 10px 0;
             padding: 10px;
             border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
-    <h1>胎教音乐播放列表</h1>
-    <ul id="music-list">
-        <li>
-            <a href="https://pan.baidu.com/s/1JAB6LgBuOjHMeziQqe1UIg?pwd=gxuw" target="_blank">音乐1</a>
-            <p>提取码：gxuw</p>
-        </li>
-        <li>
-            <a href="https://pan.baidu.com/s/1TO51X1vSPOo4Io4oAnu1OA?pwd=ioh1" target="_blank">音乐2</a>
-            <p>提取码：ioh1</p>
-        </li>
-        <li>
-            <a href="https://pan.baidu.com/s/1_BC_7UhMt8gXUXItAGG62g?pwd=96wc" target="_blank">音乐3</a>
-            <p>提取码：96wc</p>
-        </li>
-    </ul>
-</body>
-</html>
+            box-shadow: 0 0 5px rgba(0
