--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 <body>
     <h1>胎教音乐播放列表</h1>
     <ul id="music-list">
-        <li onclick="playMusic('https://share.weiyun.com/ds9xHwhw')">音乐1</li>
-        <li onclick="playMusic('https://share.weiyun.com/h98rhtW6')">音乐2</li>
-        <li onclick="playMusic('https://share.weiyun.com/pWFabhhq')">音乐3</li>
+        <li onclick="playMusic('https://www.jianguoyun.com/p/Da-8qtYQgNzWDBi3wdQFIAA')">音乐1</li>
+        <li onclick="playMusic('https://www.jianguoyun.com/p/Darz6tEQgNzWDBi4wdQFIAA')">音乐2</li>
         <!-- 继续添加其他音乐链接 -->
     </ul>
     <audio id="audio-player" controls></audio>
